[package]
name = "mgentools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
glob = "0.3.1"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
